--- a/app.css
+++ b/app.css
@@ -58,7 +58,7 @@ body {
   }
   
   .navbar {
-    background-color: rgba(45, 60, 73, 0.9490196078431372);
+    background-color: brown;
   }
   
   .navbar-light .navbar-nav .nav-link {
@@ -87,7 +87,7 @@ body {
   }
   
   footer {
-    background-color: #2d3c49;
+    background-color: brown;
     color: white;
     margin-top: 50px;
     display: flex;
