--- a/app.css
+++ b/app.css
@@ -4,7 +4,7 @@ body {
   }
   
   header {
-    background-image: url("../images/bridge.jpg");
+    background-image: url("portfolio picture.jpg");
     height: 100vh;
     background-size: cover;
   }
